# Pentagon_robot

./: .gitignore  REPO_LATEST_VERSION_REVIEW.md
Main_Assembly_1/: CMakeLists.txt  package.xml
Main_Assembly_1/Main_Assembly_V3_URDF/: CMakeLists.txt  package.xml
Main_Assembly_1/Main_Assembly_V3_URDF/config/: joint_names_Main_Assembly_V3_URDF.yaml
Main_Assembly_1/Main_Assembly_V3_URDF/launch/: display.launch  gazebo.launch
Main_Assembly_1/Main_Assembly_V3_URDF/meshes/: Endeffector.STL  Link_2.STL
Main_Assembly_1/Main_Assembly_V3_URDF/urdf/: Main_Assembly_V3_URDF.csv  Main_Assembly_V3_URDF.urdf
Main_Assembly_1/URDF_tray/: CMakeLists.txt  package.xml
Main_Assembly_1/URDF_tray/launch/: display.launch  gazebo.launch
Main_Assembly_1/URDF_tray/meshes/: Front_tray.STL  Tray_left.STL  base_link.STL
Main_Assembly_1/URDF_tray/urdf/: URDF_tray.csv  URDF_tray.urdf
Main_Assembly_1/arduino/: stepper_angle_driver.ino  stepper_test_tmc2208.ino
Main_Assembly_1/config/: ball_positions.yaml  controllers.yaml  joint_names_Main_Assembly_1.yaml  robot_params.yaml
Main_Assembly_1/launch/: display.launch  display.launch.py  five_bar_ik.launch.py  gazebo.launch  ros2_control.launch.py
Main_Assembly_1/meshes/: Front_tray_new.STL  Link_1.STL  Link_3.STL  V3_Link_4.STL  V3_base_link.STL  base_link.STL  channel_suction_link.STL  gear_suction.STL  link_left.STL  motor_Link_right.STL  motor_link_left.STL  right_link.STL  suction_link.STL
Main_Assembly_1/rviz/: config.rviz
Main_Assembly_1/scripts/: air_valve.py  arduino_bridge.py  calibrate_holes.py  debug_gpio.py  find_offset.py  five_bar_ik_node.py  five_bar_ik_node.py.bak  linkage_gui.py  linkage_gui_tk.py  mks_servo42c_bridge.py  mks_servo42c_protocol.py  pick_and_place_planner.py  pick_and_place_planner.py.bak  pick_and_place_planner_v2.py  pick_and_place_test.py  pick_place_gui.py  pressure_sensor_node.py  pressure_sensor_test.py  read_pressure_serial.py  ref  servo_node.py  servotest.py  slider_gui.py  suction_hardware_node.py  test_fs90r.py  test_single_motor.py  test_stepper_angles.py  web_dashboard_server.py
Main_Assembly_1/scripts/sketch_feb12a/: sketch_feb12a.ino
Main_Assembly_1/urdf/: Main_Assembly_1.csv  Main_Assembly_1.urdf  Main_Assembly_1.urdf.bak_2026-03-29_front_tray_swap  Main_Assembly_1.urdf.bak_2026-03-29_mainassembly_v3_integration  Main_Assembly_1.urdf.bak_2026-03-29_new_urdf_keep_old_endeffector  Main_Assembly_1.urdf.bak_2026-03-29_pre_v3_clean
(+11 files in other folders)
